Fix hamburger icon on mobile.

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,6 @@ body {
     border-top-width: 1px;
     border-top-style: solid;
     border-top-color: rgba(255, 255, 255, 0.5);
-    font-size: .50em;
     color:ghostwhite;
     min-width: 75%;
     max-width: 100%;
@@ -220,33 +219,34 @@ a:hover {
 }
 
 .hamburger {
-  position: fixed;
-  z-index: 100;
-  top: 1rem;
-  right: 1rem;
-  padding: 4px;
-  border: gray solid 1px;
-  background: white;
-  cursor: pointer;
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    right: 1rem;
+    padding: 4px;
+    border: gray solid 1px;
+    background: white;
+    cursor: pointer;
 }
 
-.closeIcon {
-  display: none;
+.material-icons.closeIcon {
+    display: none;
 }
 
 .menu {
-  position: fixed;
-  transform: translateY(-100%);
-  transition: transform 0.2s;
-  width: 100%;
-  height:  100%;
-  z-index: 99;
-  background: black;
-  color: white;
-  list-style: none;
-  padding-top: 4rem;
+    background-image: url('images/sidebars2-min.jpg');
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    width: 100%;
+    height:  100%;
+    z-index: 99;
+    background: black;
+    color: white;
+    list-style: none;
+    padding-top: 4rem;
 }
 
 .showMenu {
-  transform: translateY(0);
+    transform: translateY(0);
 }
